--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>hola soy brayan y son las 11 y 07 en julio </title>
 </head>
 <body>
     <p>
         hola brayan  del futuro esta es una de las primeras cosas que haces usando  usando ubuntu WSD
-        y sigueme en mi instagram brayandmmm
+        y sigueme en mi instagram brayandmmm ,,, esta es el colmo ola jaajaj esto es re cool magaso el que lo creo jajaj
     </p>
 </body>
 </html>
